--- a/WPF.QuickStart.UI/Views/ClientServer/ChildView.xaml
+++ b/WPF.QuickStart.UI/Views/ClientServer/ChildView.xaml
@@ -1,15 +1,14 @@
 ﻿<UserControl x:Class="WPF.QuickStart.UI.Views.ClientServer.ChildView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:cal="http://www.caliburnproject.org"
              xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid"
              xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:gif="http://wpfanimatedgif.codeplex.com">
 
-    <DockPanel Height="Auto">
-
-        <TextBlock DockPanel.Dock="Top" Text="{Binding DisplayName}" Style="{StaticResource HeaderStyle}" />
+    <DockPanel Height="Auto" Margin="0,10">
 
         <!--<ctrl:MyCustomControl Margin="40,10" BorderBrush="Red" BorderThickness="2" ItemsSource="{Binding MyCollectionItems}" EnabledUi="{Binding Enabled}" IsExportable="Visible" />-->
 
@@ -24,11 +23,12 @@
                         ToolTip="Connect to the server" 
                         IsEnabled="{Binding Connected, Converter={StaticResource inverseBoolConverter}}" 
                         Style="{DynamicResource AccentedSquareButtonStyle}" 
-                        Width="172" Height="52" 
+                        Width="172" Height="45" 
                         Margin="20, 0, 10, 5"
                         />
-                    <Rectangle DockPanel.Dock="Left" Width="30" Height="30" 
-                           Visibility="{Binding Connected, Converter={StaticResource boolToVisibilityConverter}}">
+                    <Rectangle DockPanel.Dock="Left" 
+                                Width="30" Height="30" 
+                                Visibility="{Binding Connected, Converter={StaticResource boolToVisibilityConverter}}" >
                         <Rectangle.Resources>
                         </Rectangle.Resources>
                         <Rectangle.Fill>
