--- a/WPF.QuickStart.UI/Views/Windows8.xaml
+++ b/WPF.QuickStart.UI/Views/Windows8.xaml
@@ -1,8 +1,8 @@
-﻿<!--<Window x:Class="Win8StartScreen.MainWindow"
+﻿<Window x:Class="Win8StartScreen.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="MainWindow" Height="513" Width="1138" WindowState="Maximized" WindowStyle="None" Background="#191970">
+        Title="MainWindow" Height="4000" Width="1138" WindowState="Maximized" WindowStyle="None" Background="#191970">
     <Window.Resources>
         <Style x:Key="LargeTileStyle" TargetType="mah:Tile">
             <Setter Property="Width" Value="300" />
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="83*"/>
-            <RowDefinition Height="259*"/>
+            <RowDefinition Height="4000"/>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="1"
@@ -34,26 +34,23 @@
                    FontSize="30"
                    FontFamily="Segoe UI" />
 
-        <WrapPanel Grid.Row="1" Grid.Column="1" Width="940" Height="382" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <WrapPanel Grid.Row="1" Grid.Column="1" Width="950" Height="700" HorizontalAlignment="Left" VerticalAlignment="Top">
             <mah:Tile Title="Mail" Style="{StaticResource LargeTileStyle}" Content="ImageHere" Background="Teal" Margin="3"/>
             <mah:Tile Title="Desktop" Style="{StaticResource LargeTileStyle}"  Margin="3">
-                --><!--<mah:Tile.Background>
+                <!--<mah:Tile.Background>
                     <ImageBrush ImageSource="Images/windesktop.jpg" />
-                </mah:Tile.Background>--><!--
+                </mah:Tile.Background>-->
             </mah:Tile>
             <mah:Tile Title="Finance" Style="{StaticResource LargeTileStyle}" Background="Green" />
             <mah:Tile Title="People" Style="{StaticResource LargeTileStyle}" Background="#D2691E" />
             <mah:Tile Title="Weather" Style="{StaticResource LargeTileStyle}" Background="#1E90FF" />
             <mah:Tile Title="Weather" Style="{StaticResource SmallTileStyle}" Background="#1E90FF" />
             <mah:Tile Title="Store" Style="{StaticResource SmallTileStyle}" Background="Green" />
+            <mah:Tile Title="Store" Style="{StaticResource SmallTileStyle}" Background="Green" />
+            <mah:Tile Title="Store" Style="{StaticResource SmallTileStyle}" Background="Green" />
+
+            
         </WrapPanel>
     </Grid>
-</Window>-->
-
-<Window x:Class="Win8StartScreen.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="MainWindow" Height="513" Width="1138" WindowState="Maximized" WindowStyle="None" Background="#191970">
-    
 </Window>
+
