Add windows 8 screen to test composition of view with MEF (view composed of a userControl)

--- a/WPF.QuickStart.UI/App.xaml
+++ b/WPF.QuickStart.UI/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="/Resources/ControlTemplates/MyCustomControl.xaml"/>
                 <ResourceDictionary Source="/Resources/ControlTemplates/DialogControl.xaml"/>
                 <ResourceDictionary Source="/Resources/ControlTemplates/BusyIndicator.xaml"/>
+                <ResourceDictionary Source="/Resources/ControlTemplates/Yahoo/YahooInputControl.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
